* Add JS file * Change Python module for uwsgi * Make sure NGINX use the correct socket

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 chdir = /opt/cnaas/
-module = cnaas_frontend.wsgi:application
+module = cnaas.wsgi:application
 master = True
 socket = /opt/cnaas/app.sock
 processes = 2
