--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,8 +9,8 @@ server {
     ssl_certificate_key /etc/nginx/conf.d/cnaas_snakeoil.key;
     
     location / {
-        include uwsgi_params;
-        uwsgi_pass unix:///opt/venv/app.sock;
+        include uwsgi_params;	
+        uwsgi_pass unix:///opt/cnaas/app.sock;
 	default_type application/json;
     }
 }
