Add alias for Django static files

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,10 +7,14 @@ server {
     ssl on;
     ssl_certificate /etc/nginx/conf.d/cnaas_snakeoil.crt;
     ssl_certificate_key /etc/nginx/conf.d/cnaas_snakeoil.key;
-    
+
     location / {
-        include uwsgi_params;	
-        uwsgi_pass unix:///opt/cnaas/app.sock;
-	default_type application/json;
+	include uwsgi_params;
+	uwsgi_pass unix:///opt/cnaas/app.sock;
+    }
+
+    location /static/ {
+	autoindex on;
+	alias /opt/cnaas/cnaas/static/;
     }
 }
