NGINX proxy for CNaaS API

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -17,4 +17,9 @@ server {
 	autoindex on;
 	alias /opt/cnaas/cnaas/static/;
     }
+
+    location /api/ {
+        set_by_lua $cnaas_host 'return os.getenv("CNAAS_HOST")';
+        proxy_pass $cnaas_host;
+    }
 }
