Set static API host for /api/ proxy

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -19,7 +19,6 @@ server {
     }
 
     location /api/ {
-        set_by_lua $cnaas_host 'return os.getenv("CNAAS_HOST")';
-        proxy_pass $cnaas_host;
+        proxy_pass https://cnaas_api/api/v1.0/;
     }
 }
