--- a/react-front/package.json
+++ b/react-front/package.json
@@ -21,7 +21,8 @@
     "eslint-config-recommended": "^4.0.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^24.9.0",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "react-router-dom": "^5.1.2"
   },
   "dependencies": {
     "react": "^16.9.0",
