--- a/react-front/package.json
+++ b/react-front/package.json
@@ -20,6 +20,7 @@
     "eslint": "^6.4.0",
     "eslint-config-recommended": "^4.0.0",
     "eslint-plugin-react": "^7.14.3",
+    "history": "^4.10.1",
     "jest": "^24.9.0",
     "parcel-bundler": "^1.12.3",
     "react-router-dom": "^5.1.2"
