--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-front",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html",
-    "test": "jest --watch"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -14,21 +14,25 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^6.4.0",
+    "eslint": "^6.7.2",
     "eslint-config-recommended": "^4.0.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.17.0",
     "history": "^4.10.1",
     "jest": "^24.9.0",
-    "parcel-bundler": "^1.12.3",
-    "react-router-dom": "^5.1.2"
+    "parcel-bundler": "^1.12.4",
+    "react-router-dom": "^5.1.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
+    "npm-check-updates": "^4.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.2"
   }
 }
