--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "build": "parcel build index.js"
   },
   "keywords": [],
   "author": "",
