proxy_pass more specific path /api/v1.0/auth instead of /auth

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,7 +11,7 @@ server {
         proxy_pass CNAAS_API_URL;
     }
 
-    location /auth {
+    location /api/v1.0/auth {
         proxy_pass CNAAS_AUTH_URL;
     }
 
