adding prism to files for syntax highliting of the diff, includes import of Prsm npm package, highlight specific css, imports of all csss in the react App component, plugin info in babelrc

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
-  "presets": [
-    "env",
-    "react"
-  ],
+  "presets": ["env", "react"],
   "plugins": [
+    [
+      "prismjs",
+      {
+        "languages": ["javascript", "css", "diff"],
+        "plugins": ["diff"],
+        "theme": "default",
+        "css": true
+      }
+    ],
     "transform-class-properties"
   ]
 }
