--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-plugin-prismjs": "^2.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -24,11 +25,11 @@
     "history": "^4.10.1",
     "jest": "^24.9.0",
     "parcel-bundler": "^1.12.3",
+    "prismjs": "^1.19.0",
     "react-router-dom": "^5.1.2"
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
-    "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "semantic-ui-react": "^0.88.1"
