--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -8,3 +8,12 @@ services:
       - GITREPO_ETC
       - CNAAS_API_URL
       - CNAAS_AUTH_URL
+      - CNAAS_FRONT_URL
+    volumes:
+      - type: volume
+        source: cnaas-front-cert
+        target: /opt/cnaas/cert
+volumes:
+  cnaas-front-cert:
+    external: true
+
