--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -4,8 +4,8 @@ server {
     client_max_body_size 200M;
 
     ssl on;
-    ssl_certificate /etc/nginx/conf.d/snakeoil.crt;
-    ssl_certificate_key /etc/nginx/conf.d/snakeoil.key;
+    ssl_certificate /opt/cnaas/cert/cnaasfront_combined.crt;
+    ssl_certificate_key /opt/cnaas/cert/cnaasfront.key;
     
     location /api {
         proxy_pass CNAAS_API_URL;
