--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,6 +11,13 @@ server {
         proxy_pass CNAAS_API_URL;
     }
 
+    location /socket.io/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass CNAAS_API_URL;
+    }
+
     location /api/v1.0/auth {
         proxy_pass CNAAS_AUTH_URL;
     }
