Route /firmware to http port on API host, which should be the httpd container containing firmwares

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,6 +11,10 @@ server {
         proxy_pass CNAAS_API_URL;
     }
 
+    location /firmware {
+        proxy_pass CNAAS_HTTPD_URL;
+    }
+
     location /socket.io/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
