Only redirect /firmware/ with slash on the end to not conflict webui

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,7 +11,7 @@ server {
         proxy_pass CNAAS_API_URL;
     }
 
-    location /firmware {
+    location /firmware/ {
         proxy_pass CNAAS_HTTPD_URL;
     }
 
