Allow setting of CNAAS_FIRMWARE_URL to specify custom path to firmwares, useful if switches can't do dns lookup

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - CNAAS_API_URL
       - CNAAS_AUTH_URL
       - CNAAS_FRONT_URL
+      - CNAAS_FIRMWARE_URL
     volumes:
       - type: volume
         source: cnaas-front-cert
