Add Docker setup for interactive frontend dev

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
+    "dockerstart": "parcel index.html --port 4443",
     "test": "jest --watch",
     "build": "parcel build index.js"
   },
