Allow adding some links to docs, repos, monitoring

--- a/docker/front/config/example.env
+++ b/docker/front/config/example.env
@@ -1,2 +1,5 @@
 API_URL=CNAAS_FRONT_URL
 FIRMWARE_URL=CNAAS_FIRMWARE_URL
+TEMPLATES_WEB_URL=TEMPLATES_WEB_URL
+SETTINGS_WEB_URL=SETTINGS_WEB_URL
+MONITORING_WEB_URL=MONITORING_WEB_URL
