--- a/exemple.env
+++ b/exemple.env
@@ -1,2 +1,6 @@
 API_URL=https://localhost
 FIRMWARE_URL=https://localhost/firmware/
+TEMPLATES_WEB_URL=https://localhost
+SETTINGS_WEB_URL=https://localhost
+MONITORING_WEB_URL=https://localhost
+
