update babel a bit, try to get rid of '/opt/cnaas/cnaas-front/node_modules/prismjs/themes/prism.css:undefined:undefined: EISDIR: illegal operation on a directory, read' error message

--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
         "languages": ["javascript", "css", "diff"],
         "plugins": ["diff"],
         "theme": "default",
-        "css": true
+        "css": false
       }
     ],
     "transform-class-properties"
