--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "7.21",
     "@babel/preset-react": "^7.18.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^29.5.0",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
@@ -32,7 +32,7 @@
     "react-router-dom": "^5.2.0"
   },
   "dependencies": {
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "package.json": "^2.0.1",
     "query-string": "^6.14.1",
