--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,6 +11,10 @@ server {
         proxy_pass CNAAS_API_URL;
     }
 
+    location /swaggerui {
+        proxy_pass CNAAS_API_URL;
+    }
+
     location /firmware/ {
         proxy_pass CNAAS_HTTPD_URL;
     }
