--- a/docker/front/config/example.env
+++ b/docker/front/config/example.env
@@ -1,5 +1,7 @@
 API_URL=CNAAS_FRONT_URL
 FIRMWARE_URL=CNAAS_FIRMWARE_URL
+FIRMWARE_REPO_URL=CNAAS_FIRMWARE_REPO_URL
+FIRMWARE_REPO_METADATA_URL=CNAAS_FIRMWARE_REPO_METADATA_URL
 TEMPLATES_WEB_URL=TEMPLATES_WEB_URL
 SETTINGS_WEB_URL=SETTINGS_WEB_URL
 MONITORING_WEB_URL=MONITORING_WEB_URL
