--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "query-string": "^6.14.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-semantic-toasts": "^0.6.6",
     "semantic-ui-react": "^2.1.4",
     "socket.io-client": "^3.1.3"
   }
