--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-semantic-toasts": "^0.6.6",
     "react-semantic-toasts-2": "^0.6.7",
     "semantic-ui-react": "^2.1.4",
-    "socket.io-client": "^3.1.3"
+    "socket.io-client": "^3.1.3",
+    "yaml": "^2.3.2"
   }
 }
