env var login method, login form css change, example.env rename and added oidc_enabled

--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
-API_URL=https://localhost
+API_URL=http://localhost:5000
 FIRMWARE_URL=https://localhost/firmware/
 FIRMWARE_REPO_URL=https://repo/firmware/
 FIRMWARE_REPO_METADATA_URL=https://repo/firmware.json
 TEMPLATES_WEB_URL=https://localhost
 SETTINGS_WEB_URL=https://localhost
 MONITORING_WEB_URL=https://localhost
-
+OIDC_ENABLED=true
