Example file redo

--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-API_URL=http://localhost:5000
+API_URL=https://localhost
 FIRMWARE_URL=https://localhost/firmware/
 FIRMWARE_REPO_URL=https://repo/firmware/
 FIRMWARE_REPO_METADATA_URL=https://repo/firmware.json
