--- a/example.env
+++ b/example.env
@@ -6,3 +6,4 @@ TEMPLATES_WEB_URL=https://localhost
 SETTINGS_WEB_URL=https://localhost
 MONITORING_WEB_URL=https://localhost
 OIDC_ENABLED=true
+PERMISSIONS_DISABLED=false
