--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^4.0.0",
     "package.json": "^2.0.1",
     "prop-types": "^15.8.1",
     "query-string": "^6.14.1",
