host header needed for secure cookie set in new oauth

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -9,6 +9,8 @@ server {
     
     location /api {
         proxy_pass CNAAS_API_URL;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /swaggerui {
@@ -28,6 +30,8 @@ server {
 
     location /api/v1.0/auth {
         proxy_pass CNAAS_AUTH_URL;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location / {
