Prettier ESLint setup

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env", "@babel/preset-react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     [
       "prismjs",
@@ -9,7 +9,6 @@
         "theme": "default",
         "css": false
       }
-    ],
-    "transform-class-properties"
+    ]
   ]
 }
