--- a/package.json
+++ b/package.json
@@ -7,27 +7,34 @@
     "start": "parcel index.html",
     "dockerstart": "parcel index.html --port 8083",
     "test": "jest --watch",
-    "build": "parcel build index.js"
+    "build": "parcel build index.js",
+    "lint": "eslint . && prettier . --check",
+    "lint:fix": "eslint . --fix && prettier . --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.22.9",
+    "@babel/core": "^7.24.4",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/preset-react": "^7.22.5",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.6.2",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^6.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-recommended": "^4.1.0",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "history": "^5.3.0",
     "jest": "^29.6.2",
     "parcel-bundler": "^1.8.1",
+    "prettier": "3.2.5",
     "prismjs": "^1.29.0",
     "react-router-dom": "^5.3.4"
   },
