--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      { "targets": { "node": "current" }, "shippedProposals": true }
+    ],
+    ["@babel/preset-react", { "runtime": "automatic" }]
+  ],
   "plugins": [
     [
       "prismjs",
