--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "dockerstart": "parcel index.html --port 8083",
-    "test": "jest --watch",
+    "test": "jest --verbose",
     "build": "parcel build index.js",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write"
@@ -18,8 +18,12 @@
     "@babel/core": "^7.24.4",
     "@babel/eslint-parser": "^7.24.1",
     "@babel/plugin-transform-class-properties": "^7.24.1",
-    "@babel/preset-react": "^7.22.5",
-    "babel-jest": "^29.6.2",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "babel-jest": "^29.7.0",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^8.57.0",
@@ -32,11 +36,13 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "history": "^5.3.0",
-    "jest": "^29.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel-bundler": "^1.8.1",
     "prettier": "3.2.5",
     "prismjs": "^1.29.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-test-renderer": "^18.2.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
