set OIDC_ENABLED and PERMISSIONS_DISABLED env variables to .env

--- a/docker/front/config/example.env
+++ b/docker/front/config/example.env
@@ -5,3 +5,5 @@ FIRMWARE_REPO_METADATA_URL=CNAAS_FIRMWARE_REPO_METADATA_URL
 TEMPLATES_WEB_URL=TEMPLATES_WEB_URL
 SETTINGS_WEB_URL=SETTINGS_WEB_URL
 MONITORING_WEB_URL=MONITORING_WEB_URL
+OIDC_ENABLED=OIDC_ENABLED
+PERMISSIONS_DISABLED=PERMISSIONS_DISABLED
