.env flag to core in mgmt

--- a/example.env
+++ b/example.env
@@ -7,3 +7,4 @@ SETTINGS_WEB_URL=https://localhost
 MONITORING_WEB_URL=https://localhost
 OIDC_ENABLED=true
 PERMISSIONS_DISABLED=false
+MGMT_DOMAIN_CORE_ENABLED=false
