--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,8 @@
-version: '3.7'
+version: "3.7"
 services:
-
   #
   # CNaaS NMS interactive frontend development setup
   #
-
 
   front:
     build: .
@@ -73,16 +71,13 @@ services:
         target: /opt/cnaas/cacert
 
   httpd:
-    image:
-      docker.sunet.se/cnaas/httpd
+    image: docker.sunet.se/cnaas/httpd
     ports:
       - 80:1180
     networks:
       - cnaas
     environment:
       - GITREPO_TEMPLATES
-
-
 
   #
   # Databases
@@ -98,7 +93,7 @@ services:
       - POSTGRES_DB=cnaas
     networks:
       - cnaas
-  
+
   redis:
     build: ../cnaas-nms/docker/redis/
     networks:
@@ -124,7 +119,7 @@ networks:
     name: cnaas
     ipam:
       config:
-      - subnet: 172.30.0.0/24
+        - subnet: 172.30.0.0/24
     driver_opts:
       com.docker.network.bridge.name: br-cnaas
 
