--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 services:
   cnaas_front:
     build: ./front/
@@ -19,4 +19,3 @@ services:
 volumes:
   cnaas-front-cert:
     external: true
-
