--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --verbose",
     "build": "parcel build index.js",
     "lint": "eslint . && prettier . --check",
-    "lint:fix": "eslint . --fix && prettier . --write"
+    "lint:fix": "eslint . --fix ; prettier . --write"
   },
   "keywords": [],
   "author": "",
