Change git command

--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
-API_URL=https://localhost
-FIRMWARE_URL=https://localhost/firmware/
-FIRMWARE_REPO_URL=https://repo/firmware/
-FIRMWARE_REPO_METADATA_URL=https://repo/firmware.json
-TEMPLATES_WEB_URL=https://localhost
-SETTINGS_WEB_URL=https://localhost
-MONITORING_WEB_URL=https://localhost
-OIDC_ENABLED=true
+API_URL=https://norpan.cnaas.sunet.se
+FIRMWARE_URL=https://norpan.cnaas.io/firmware/
+FIRMWARE_REPO_METADATA_URL=https://firmware.cnaas.sunet.se/firmware.json
+FIRMWARE_REPO_URL=https://firmware.cnaas.sunet.se/firmware/
+TEMPLATES_WEB_URL=https://platform.sunet.se/CNaaS/cnaas-norpan-templates/src/branch/main
+SETTINGS_WEB_URL=https://platform.sunet.se/CNaaS/cnaas-norpan-templates/src/branch/main
+MONITORING_WEB_URL=
+OIDC_ENABLED=fjdkfgkg
 PERMISSIONS_DISABLED=true
 MGMT_DOMAIN_CORE_ENABLED=false
