--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -1,3 +1,4 @@
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=auth_cache:1m max_size=64m inactive=60m;
 server {
     listen 4443 ssl;
     server_name cnaas-front;
@@ -31,6 +32,24 @@ server {
         proxy_pass CNAAS_AUTH_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
+    location /api/v1.0/netboxauth {
+        proxy_pass https://api:1443/api/v1.0/devices?per_page=1;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_cache auth_cache;
+        proxy_cache_key "$http_authorization$remote_addr";
+        proxy_cache_valid 200 300s;
+        proxy_cache_valid any 10s;
+    }
+
+    location /netbox/ {
+        auth_request /api/v1.0/netboxauth;
+        proxy_pass NETBOX_API_URL;
+        proxy_set_header Authorization "Token NETBOX_AUTH_TOKEN";
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_ssl_server_name on;
     }
 
     location / {
