AUTH -> API token

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -47,7 +47,7 @@ server {
     location /netbox/ {
         auth_request /api/v1.0/netboxauth;
         proxy_pass NETBOX_API_URL;
-        proxy_set_header Authorization "Token NETBOX_AUTH_TOKEN";
+        proxy_set_header Authorization "Token NETBOX_API_TOKEN";
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_ssl_server_name on;
     }
