proxy_pass to graphite

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -52,6 +52,14 @@ server {
         proxy_ssl_server_name on;
     }
 
+    location /graphite/ {
+        add_header 'X-Content-Type-Options' 'nosniff';
+        auth_request /api/v1.0/netboxauth;
+        proxy_pass GRAPHITE_URL;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_ssl_server_name on;
+    }
+
     location / {
         root /opt/cnaas/static;
         try_files $uri $uri/ /index.html;
