environment variable to configure arista eos detect 32/64bit for nms v1.7

--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,4 @@ MONITORING_WEB_URL=https://localhost
 OIDC_ENABLED=true
 PERMISSIONS_DISABLED=true
 MGMT_DOMAIN_CORE_ENABLED=false
+ARISTA_DETECT_ARCH=true
