--- a/docker/front/config/example.env
+++ b/docker/front/config/example.env
@@ -7,3 +7,4 @@ SETTINGS_WEB_URL=SETTINGS_WEB_URL
 MONITORING_WEB_URL=MONITORING_WEB_URL
 OIDC_ENABLED=OIDC_ENABLED
 PERMISSIONS_DISABLED=PERMISSIONS_DISABLED
+ARISTA_DETECT_ARCH=ARISTA_DETECT_ARCH
