--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Runtime data
 pids
@@ -26,6 +24,9 @@ coverage
 # Bower dependency directory (https://bower.io/)
 bower_components
 
+# pacel cache
+.parcel-cache/
+
 # node-waf configuration
 .lock-wscript
 
@@ -35,9 +36,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
-# TypeScript v1 declaration files
-typings/
 
 # Optional npm cache directory
 .npm
@@ -51,14 +49,8 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
-.yarn-integrity
-
 # dotenv environment variables file
 .env
-
-# next.js build output
-.next
 
 dist/
 .DS_Store
