--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "history": "^5.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "parcel-bundler": "^1.8.1",
+    "parcel": "^2.15.1",
     "prettier": "3.2.5",
     "react-test-renderer": "^18.2.0"
   },
