move css to link tags for correct ordering
Semantic UI CSS is broken, so importing it as js module throws error. We can instead import it in a link, but then we need to import our overrides so they are applied after.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "rm -rf .parcel-cache/* && parcel",
     "dockerstart": "parcel --port 8083",
     "test": "jest --verbose",
-    "build": "parcel build",
+    "build": "rm -rf dist/ && parcel build",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix ; prettier . --write"
   },
