--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prop-types": "^15.8.1",
     "query-string": "^6.14.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-semantic-toasts-2": "^0.6.7",
     "semantic-ui-react": "^2.1.4",
