--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "cnaas-front",
   "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
+  },
   "browserslist": [
     "defaults"
   ],
@@ -18,32 +21,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/eslint-parser": "^7.24.1",
+    "@babel/core": "^7.28",
+    "@babel/eslint-parser": "^7.28",
     "@babel/plugin-transform-class-properties": "^7.24.1",
-    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-env": "^7.28",
     "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.0",
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "babel-plugin-prismjs": "^2.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "buffer": "^6.0.3",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-recommended": "^4.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.37",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.0",
+    "globals": "^16.4.0",
     "history": "^5.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.16",
-    "prettier": "3.2.5",
+    "prettier": "3.6.2",
     "react-test-renderer": "^18.2.0"
   },
   "dependencies": {
