--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cnaas-front",
   "version": "1.0.0",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   },
   "browserslist": [
     "defaults"
@@ -51,7 +51,6 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^4.0.0",
-    "package.json": "^2.0.1",
     "prismjs": "^1.30.0",
     "prop-types": "^15.8.1",
     "query-string": "^6.14.1",
