Change to a runtime injection instead of build-time injection of variables.

--- a/docker/front/config/nginx.conf
+++ b/docker/front/config/nginx.conf
@@ -1,20 +1,20 @@
-user www-data www-data;
-worker_processes auto;
-pid /tmp/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /tmp/nginx.pid;
 
 events {
-       worker_connections 768;
+       worker_connections 1024;
 }
 
 http {
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
         sendfile on;
         tcp_nopush on;
         tcp_nodelay on;
         keepalive_timeout 65;
         types_hash_max_size 2048;
-        include /etc/nginx/mime.types;
-        default_type application/octet-stream;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
         ssl_prefer_server_ciphers on;
         access_log /var/log/nginx/access.log;
@@ -23,5 +23,4 @@ http {
         gzip_types text/plain application/json text/css;
         gzip_min_length 1000;
         include /etc/nginx/conf.d/*.conf;
-        include /etc/nginx/sites-enabled/*;
 }
