--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -1,6 +1,8 @@
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=auth_cache:1m max_size=64m inactive=60m;
+
 server {
-    listen 4443 ssl;
+    listen 4443 ssl http2;
+    listen [::]:4443 ssl http2;
     server_name cnaas-front;
     client_max_body_size 200M;
 
@@ -8,34 +10,34 @@ server {
     ssl_certificate_key /opt/cnaas/cert/cnaasfront.key;
     
     location /api {
-        proxy_pass CNAAS_API_URL;
+        proxy_pass API_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /swaggerui {
-        proxy_pass CNAAS_API_URL;
+        proxy_pass API_URL;
     }
 
     location /firmware/ {
-        proxy_pass CNAAS_HTTPD_URL;
+        proxy_pass HTTPD_URL;
     }
 
     location /socket.io/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass CNAAS_API_URL;
+        proxy_pass API_URL;
     }
 
     location /api/v1.0/auth {
-        proxy_pass CNAAS_AUTH_URL;
+        proxy_pass AUTH_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /api/v1.0/netboxauth {
-        proxy_pass https://api:1443/api/v1.0/devices?per_page=1;
+        proxy_pass API_URL/api/v1.0/devices?per_page=1;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_cache auth_cache;
