--- a/docker/front/Dockerfile
+++ b/docker/front/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /opt/cnaas-front
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install --ignore-scripts
 
 COPY src src
 COPY docker/front/config/build.env .env
