--- a/docker/front/Dockerfile
+++ b/docker/front/Dockerfile
@@ -27,10 +27,13 @@ COPY docker/front/cert/* /etc/nginx/conf.d/
 
 # Copy over pre-start script
 COPY docker/front/config/env.sh /docker-entrypoint.d/env.sh
-RUN chmod +x /docker-entrypoint.d/env.sh
-
-# Make sure all files are owned by nginx
-RUN chown -R nginx:nginx /var/cache/nginx /opt/cnaas/cert /opt/cnaas/static /etc/nginx/conf.d /docker-entrypoint.d/env.sh
+RUN chmod +x /docker-entrypoint.d/env.sh && \
+chown -R nginx:nginx \
+/var/cache/nginx \
+/opt/cnaas/cert \
+/opt/cnaas/static \
+/etc/nginx/conf.d \
+/docker-entrypoint.d/env.sh
 
 USER nginx
 
