--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -1,8 +1,9 @@
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=auth_cache:1m max_size=64m inactive=60m;
 
 server {
-    listen 4443 ssl http2;
-    listen [::]:4443 ssl http2;
+    listen 4443 ssl;
+    listen [::]:4443 ssl;
+    http2 on;
     server_name cnaas-front;
     client_max_body_size 200M;
 
