--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -11,34 +11,34 @@ server {
     ssl_certificate_key /opt/cnaas/cert/cnaasfront.key;
     
     location /api {
-        proxy_pass API_URL;
+        proxy_pass CNAAS_API_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /swaggerui {
-        proxy_pass API_URL;
+        proxy_pass CNAAS_API_URL;
     }
 
     location /firmware/ {
-        proxy_pass HTTPD_URL;
+        proxy_pass CNAAS_HTTPD_URL;
     }
 
     location /socket.io/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass API_URL;
+        proxy_pass CNAAS_API_URL;
     }
 
     location /api/v1.0/auth {
-        proxy_pass AUTH_URL;
+        proxy_pass CNAAS_AUTH_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /api/v1.0/netboxauth {
-        proxy_pass API_URL/api/v1.0/devices?per_page=1;
+        proxy_pass CNAAS_API_URL/api/v1.0/devices?per_page=1;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_cache auth_cache;
