test fix for jenkins error: com.github.dockerjava.api.exception.DockerClientException: Could not build image: When using COPY with more than one source file, the destination must be a directory and end with a /

--- a/docker/front/Dockerfile
+++ b/docker/front/Dockerfile
@@ -24,7 +24,7 @@ LABEL org.opencontainers.image.description="CNaaS Front"
 
 RUN mkdir -p /opt/cnaas/static/styles /opt/cnaas/cert
 
-COPY --from=build /opt/cnaas-front/dist/* /opt/cnaas/static
+COPY --from=build /opt/cnaas-front/dist/* /opt/cnaas/static/
 COPY src/styles/*.css /opt/cnaas/static/styles/
 
 # Copy over nginx config
