Do not log /api in front-container Removed unused /swaggerui Remove token from request and referer in access-log

--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -9,15 +9,12 @@ server {
 
     ssl_certificate /opt/cnaas/cert/cnaasfront_combined.crt;
     ssl_certificate_key /opt/cnaas/cert/cnaasfront.key;
-    
+
     location /api {
+        access_log off;
         proxy_pass CNAAS_API_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
-    }
-
-    location /swaggerui {
-        proxy_pass CNAAS_API_URL;
     }
 
     location /firmware/ {
@@ -33,6 +30,7 @@ server {
     }
 
     location /api/v1.0/auth {
+        access_log off;
         proxy_pass CNAAS_AUTH_URL;
         proxy_set_header Host            $host;
         proxy_set_header X-Forwarded-For $remote_addr;
