--- a/docker/front/config/nginx.conf
+++ b/docker/front/config/nginx.conf
@@ -8,6 +8,21 @@ events {
 }
 
 http {
+        # Sanitize token from request
+        map $request $clean_request {
+                "~*^(?<before>.*)token=[^&]*(?<after>.*)" "${before}token=***${after}";
+                default $request;
+        }
+        # Sanitize token from http_referer
+        map $http_referer $clean_http_referer {
+                "~*^(?<before>.*)token=[^&]*(?<after>.*)" "${before}token=***${after}";
+                default $http_referer;
+        }
+
+        log_format sanitized '$remote_addr - $remote_user [$time_local] '
+                        '"$clean_request" $status $body_bytes_sent '
+                        '"$clean_http_referer" "$http_user_agent"';
+
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
         sendfile on;
@@ -17,7 +32,7 @@ http {
         types_hash_max_size 2048;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
         ssl_prefer_server_ciphers on;
-        access_log /var/log/nginx/access.log;
+        access_log /var/log/nginx/access.log sanitized;
         error_log /var/log/nginx/error.log;
         gzip on;
         gzip_types text/plain application/json text/css;
