--- a/docker/front/config/nginx_app.conf
+++ b/docker/front/config/nginx_app.conf
@@ -17,6 +17,10 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
+    location /swaggerui {
+        proxy_pass CNAAS_API_URL;
+    }
+
     location /firmware/ {
         proxy_pass CNAAS_HTTPD_URL;
     }
